@@ -1,70 +1,138 @@
 package com.portfolio.main.menu.service;
 
+import com.portfolio.main.account.domain.Role;
 import com.portfolio.main.account.domain.User;
+import com.portfolio.main.account.role.exception.NotFoundRoleException;
+import com.portfolio.main.account.role.service.RoleCode;
+import com.portfolio.main.account.role.service.RoleService;
 import com.portfolio.main.account.user.service.MyUserDetailsService;
 import com.portfolio.main.menu.domain.Menu;
+import com.portfolio.main.menu.domain.MenuRole;
 import com.portfolio.main.menu.domain.Program;
 import com.portfolio.main.menu.dto.menu.CreateMenu;
 import com.portfolio.main.menu.dto.menu.EditMenu;
+import com.portfolio.main.menu.dto.menu.MenuDto;
 import com.portfolio.main.menu.dto.menu.SearchMenu;
 import com.portfolio.main.menu.exception.CannotDeleteMenuWithSubmenusException;
 import com.portfolio.main.menu.exception.MenuNotFoundException;
-import com.portfolio.main.menu.exception.ProgramNotFoundException;
+import com.portfolio.main.menu.exception.NotFoundMenuRoleException;
 import com.portfolio.main.menu.exception.UpperMenuNotFoundException;
+import com.portfolio.main.menu.repository.MenuMapper;
 import com.portfolio.main.menu.repository.MenuRepository;
-import com.portfolio.main.menu.repository.ProgramRepository;
+import com.portfolio.main.util.page.PageResult;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Service
 @Transactional
 public class MenuService {
-
     private final MenuRepository menuRepository;
-    private final ProgramRepository programRepository;
+    private final MenuMapper menuMapper;
+    private final RoleService roleService;
+    private final ProgramService programService;
+    private final MenuRoleService menuRoleService;
     private final MyUserDetailsService userDetailsService;
 
     @Autowired
-    public MenuService(MenuRepository menuRepository, ProgramRepository programRepository, MyUserDetailsService userDetailsService) {
+    public MenuService(
+            MenuRepository menuRepository
+            , MenuMapper menuMapper
+            , RoleService roleService
+            , MenuRoleService menuRoleService
+            , ProgramService programService
+            , MyUserDetailsService userDetailsService) {
         this.menuRepository = menuRepository;
+        this.menuMapper = menuMapper;
+        this.roleService = roleService;
+        this.menuRoleService = menuRoleService;
         this.userDetailsService = userDetailsService;
-        this.programRepository = programRepository;
+        this.programService = programService;
     }
 
-    public Menu findById(Long id) throws MenuNotFoundException {
-        return menuRepository.findById(id).orElseThrow(MenuNotFoundException::new);
+    public MenuDto findById(Long id) {
+        final Menu menu = menuRepository.findById(id).orElseThrow(NotFoundMenuRoleException::new);
+        return new MenuDto(menu);
     }
 
-    public List<Menu> findAllWithProgram() {
-        final List<Menu> allMenus = menuRepository.selectMenuWithProgram();
-        return allMenus.stream().filter(menu -> menu.getUpperMenu() == null).collect(Collectors.toList());
+    /**
+     * 사용자 권한을 가져와 소속된 메뉴를 조회한다.
+     *
+     * @return
+     */
+    public List<MenuDto> findAllMenusByUserRole() {
+        final Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        final RoleCode highestRoleCode = RoleCode.getHighestAuthority(authentication.getAuthorities());
+        final List<Menu> allMenus = menuRepository.selectMenuByRoleCode(highestRoleCode);
+
+        return filterSubMenusById(allMenus);
     }
 
-    public List<Menu> selectMenu(SearchMenu searchMenu) {
-        final List<Menu> allMenus = menuRepository.selectMenuWithProgram();
-        final List<Menu> topMenus = allMenus.stream().filter(menu -> menu.getUpperMenu() == null).collect(Collectors.toList());
-        return filterMenuByMenuName(topMenus, searchMenu.getMenuName());
+    public PageResult<MenuDto> selectMenuWithPageable(SearchMenu searchMenu) {
+        final PageRequest pageable = PageRequest.of(searchMenu.getPage() - 1, searchMenu.getSize(), searchMenu.getSort());
+        final PageResult<Menu> menuPageResult = menuRepository.selectMenuWithPageable(searchMenu, pageable);
+
+        return PageResult.<MenuDto>builder()
+                .result(menuPageResult.getResult().stream().map(MenuDto::new).toList())
+                .totalCount(menuPageResult.getTotalCount())
+                .page(menuPageResult.getPage())
+                .size(menuPageResult.getSize())
+                .build();
     }
 
-    public Long saveMenu(CreateMenu createMenu) throws UpperMenuNotFoundException {
+    public List<MenuDto> selectMenu(SearchMenu searchMenu) {
+        final List<Menu> menus = menuRepository.selectMenu();
+        final List<Menu> filterMenus = filterBySearchMenu(menus, searchMenu);
+        return filterSubMenusById(filterMenus);
+    }
+
+    private List<Menu> filterBySearchMenu(List<Menu> menus, SearchMenu searchMenu) {
+        return menus.stream()
+                .filter(m -> searchMenu.getId() != null && m.getId() == searchMenu.getId())
+                .filter(m -> searchMenu.getMenuName() != null && m.getMenuName().contains(searchMenu.getMenuName()))
+                .filter(m -> {
+                    if (searchMenu.getRoleCode() != null) {
+                        final List<MenuRole> menuRoles = menuRoleService.findByMenu(m);
+                        if (menuRoles.isEmpty()) {
+                            return false;
+                        } else {
+                            return menuRoles.stream()
+                                    .anyMatch(mr -> mr.getRole().getRoleCode() == RoleCode.valueOf(searchMenu.getRoleCode()));
+                        }
+                    }
+
+                    return true;
+                }).toList();
+    }
+
+
+    public Long saveMenu(CreateMenu createMenu) throws UpperMenuNotFoundException, NotFoundRoleException {
         final User createUser = userDetailsService.findUserByLoginId(createMenu.getCreateUserLoginId());
         final Menu newMenu = new Menu(createMenu.getMenuName(), createMenu.getMenuType(), createMenu.getOrderNum(), createUser);
-
-        Menu savedMenu;
 
         if (createMenu.getUpperId() != null) {
             final Menu upperMenu = menuRepository.findById(createMenu.getUpperId()).orElseThrow(UpperMenuNotFoundException::new);
             newMenu.setUpperMenu(upperMenu);
         }
 
-        savedMenu = menuRepository.save(newMenu);
+        Menu savedMenu = menuRepository.save(newMenu);
+
+        //Role 조회
+        RoleCode roleCode = RoleCode.valueOf(createMenu.getRoleCode());
+        final Role findRole = roleService.findByRoleCode(roleCode);
+
+        final MenuRole menuRole = new MenuRole(new MenuRole.MenuRoleId(savedMenu.getId(), findRole.getId()), savedMenu, findRole);
+
+        menuRoleService.save(menuRole);
+
         return savedMenu.getId();
     }
 
@@ -74,58 +142,59 @@ public class MenuService {
             throw new CannotDeleteMenuWithSubmenusException();
         }
 
+        menuRoleService.deleteByMenuId(menuId);
         menuRepository.deleteById(menuId);
     }
 
-    public void edit(Long menuId, EditMenu editMenu) {
+    public Long edit(EditMenu editMenu) {
+        final Long menuId = editMenu.getId();
         final Menu targetMenu = menuRepository.findById(menuId).orElseThrow(MenuNotFoundException::new);
 
         Menu upperMenu = null;
-        if(editMenu.getUpperId() != null) {
+        if (editMenu.getUpperId() != null) {
             upperMenu = menuRepository.findById(editMenu.getUpperId()).orElseThrow(MenuNotFoundException::new);
         }
 
         Program program = null;
-        if(editMenu.getProgramId() != null) {
-            program = programRepository.findById(editMenu.getProgramId()).orElseThrow(ProgramNotFoundException::new);
+        if (editMenu.getProgramId() != null) {
+            program = programService.findById(editMenu.getProgramId());
         }
 
         final User editUser = userDetailsService.findUserByLoginId(editMenu.getEditUserLoginId());
 
 
         targetMenu.edit(editMenu, upperMenu, program, editUser);
-    }
 
-    private List<Menu> filterMenuByMenuName(List<Menu> allMenus, String searchMenuName) {
-        List<Menu> filteredMenus = new ArrayList<>();
-        for (Menu menu : allMenus) {
-
-            boolean menuAlreadyFiltered = false;
-
-            if (searchMenuName == null)
-                menuAlreadyFiltered = true;
-            else if (menu.getMenuName().contains(searchMenuName))
-                menuAlreadyFiltered = true;
-
-
-            if(!menuAlreadyFiltered && menu.getSubMenus().size() > 0) {
-                //하위에 메뉴가 있으면 찾고자 하는 키워드를 갖고있는 menu가 있는지 재귀호출
-                final List<Menu> filteredSubMenus = filterMenuByMenuName(menu.getSubMenus(), searchMenuName);
-
-                //하위 메뉴중 필터링된 결과가 있으면
-                if (filteredSubMenus.size() > 0) {
-                    menu.changeSubMenus(filteredSubMenus);
-                    menuAlreadyFiltered = true;
-                }
+        final RoleCode topRoleCode = menuRoleService.findTopRoleCodeByMenu(targetMenu);
+        if (StringUtils.hasText(editMenu.getRoleCode())) {
+            final RoleCode editRoleCode = RoleCode.valueOf(editMenu.getRoleCode());
+            if (!editRoleCode.equals(topRoleCode)) {
+                menuRoleService.changeRole(targetMenu, editRoleCode);
             }
-
-            if(menuAlreadyFiltered)
-                filteredMenus.add(menu);
         }
 
-        return filteredMenus;
+        return menuId;
     }
 
-
+    /**
+     * 상위 객체의 subMenus 중 조회된 하위 메뉴를 제외한 메뉴만 포함하여 다시 구성하여 반환한다.
+     *
+     * @param targetMenus
+     * @return
+     */
+    private List<MenuDto> filterSubMenusById(List<Menu> targetMenus) {
+        List<MenuDto> topMenus = new ArrayList<>();
+        for (Menu menu : targetMenus) {
+            menu.clearSubMenu();
+            if (!menu.hasUpperMenu()) {
+                topMenus.add(new MenuDto(menu));
+            } else {
+                topMenus.stream()
+                        .filter(topMenuDto -> Objects.equals(topMenuDto.getId(), menu.getUpperMenu().getId()))
+                        .forEach(topMenuDto -> topMenuDto.addSubMenu(menu));
+            }
+        }
+        return topMenus;
+    }
 
 }
